<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="One_string">UST DORM FINDER</string>
    <string name="USTDORMFINDER_string">UST DORM FINDER</string>
    <string name="Back_string">Back</string>
    <string name="listView_string">List View</string>
    <string name="gridVeiw_string">Grid View</string>
    <string name="ListView_string">New Button</string>
    <string name="listView2_string">List View</string>
    <string name="Back1_string">Back</string>
    <string name="Image1_string">Image</string>
    <string name="RoomFacilities_string">Room Facilities</string>
    <string name="RoomRates_string">Room Rate</string>
    <string name="Back2_string">Back</string>
    <string name="Next_string">Next</string>
    <string name="Back3_string">Back</string>
    <string name="image2_string">image</string>
    <string name="RoomFacilities2_string">Room Facilities</string>
    <string name="RoomRates2_string">Room Rates</string>
    <string name="Back4_string">Back</string>
    <string name="Next2_string">New Button</string>
    <string name="Home_string">Home</string>
    <string name="Back5_string">Back</string>
    <string name="Next3_string">Next</string>
    <string name="Home2_string">Home</string>
    <string name="Availability_string">Small Text</string>
    <string name="checkBox_string">Avail</string>
    <string name="Reservation_string">Reservations</string>
    <string name="availability_string">Availability</string>

</resources>
