<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity$PlaceholderFragment"
    android:background="@drawable/roar">


    <ImageView
        android:layout_width="320dp"
        android:layout_height="140dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image2_string" />

    <TextView
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/RoomFacilities2_string"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#fffbff49"
        android:textSize="28sp"
        android:visibility="visible"
        android:textColorHighlight="#FFBEFCFF"
        android:textIsSelectable="false" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/RoomRates2_string"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#FFFBFF49"
        android:textColorHighlight="#FFBEFCFF"
        android:textSize="28sp"
        android:visibility="visible" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/Back5_string"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/back" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/Next3_string"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:background="@drawable/next" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/Home_string"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/home" />

</RelativeLayout>
